# soondex

./: .gitignore  Anchor.toml  README.MD  code.txt  package-lock.json  package.json  pnpm-lock.yaml  soondex_program_keypair.json  test.txt
programs/soondex/: Cargo.toml
programs/soondex/src/: lib.rs
save/: CODE1.text  code.txt  code2.txt
save/idl/: soondex.json
save/types/: soondex.ts
tests/: soondex.ts  soondex_local.ts  soondex_testnet.ts
tests/fixtures/: soondex-keypair.json
